--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -30,8 +30,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Build Demo
+      - name: Install deps
         run: npm ci
+      - name: Build Demo
         run: npm run build:demo
       - name: Setup Pages
         uses: actions/configure-pages@v2
