--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
   "files": [
     "dist"
   ],
-  "main": "./dist/react-headless-markdown-editor.umd.cjs",
-  "module": "./dist/react-headless-markdown-editor.js",
+  "main": "./dist/index.umd.cjs",
+  "module": "./dist/index.js",
   "exports": {
     ".": {
-      "import": "./dist/react-headless-markdown-editor.js",
-      "require": "./dist/react-headless-markdown-editor.umd.cjs"
+      "import": "./dist/index.js",
+      "require": "./dist/index.umd.cjs"
     }
   },
   "scripts": {
